@@ -564,6 +564,179 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+comment|/**    * Failed many times, shutdown processing    * @throws IOException    */
+specifier|private
+name|void
+name|verifyAndAssignRootWithRetries
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|int
+name|iTimes
+init|=
+name|this
+operator|.
+name|server
+operator|.
+name|getConfiguration
+argument_list|()
+operator|.
+name|getInt
+argument_list|(
+literal|"hbase.catalog.verification.retries"
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|long
+name|waitTime
+init|=
+name|this
+operator|.
+name|server
+operator|.
+name|getConfiguration
+argument_list|()
+operator|.
+name|getLong
+argument_list|(
+literal|"hbase.catalog.verification.timeout"
+argument_list|,
+literal|1000
+argument_list|)
+decl_stmt|;
+name|int
+name|iFlag
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+try|try
+block|{
+name|verifyAndAssignRoot
+argument_list|()
+expr_stmt|;
+break|break;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+name|this
+operator|.
+name|server
+operator|.
+name|abort
+argument_list|(
+literal|"In server shutdown processing, assigning root"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Aborting"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+name|iFlag
+operator|>=
+name|iTimes
+condition|)
+block|{
+name|this
+operator|.
+name|server
+operator|.
+name|abort
+argument_list|(
+literal|"verifyAndAssignRoot failed after"
+operator|+
+name|iTimes
+operator|+
+literal|" times retries, aborting"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Aborting"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|waitTime
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e1
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Interrupted when is the thread sleep"
+argument_list|,
+name|e1
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Interrupted"
+argument_list|,
+name|e1
+argument_list|)
+throw|;
+block|}
+name|iFlag
+operator|++
+expr_stmt|;
+block|}
+block|}
+block|}
 comment|/**    * @return True if the server we are processing was carrying<code>-ROOT-</code>    */
 name|boolean
 name|isCarryingRoot
@@ -706,70 +879,9 @@ argument_list|()
 condition|)
 block|{
 comment|// -ROOT-
-try|try
-block|{
-name|verifyAndAssignRoot
+name|verifyAndAssignRootWithRetries
 argument_list|()
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|KeeperException
-name|e
-parameter_list|)
-block|{
-name|this
-operator|.
-name|server
-operator|.
-name|abort
-argument_list|(
-literal|"In server shutdown processing, assigning root"
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"Aborting"
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e1
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Interrupted while verifying root region's location"
-argument_list|,
-name|e1
-argument_list|)
-expr_stmt|;
-name|Thread
-operator|.
-name|currentThread
-argument_list|()
-operator|.
-name|interrupt
-argument_list|()
-expr_stmt|;
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-name|e1
-argument_list|)
-throw|;
-block|}
 block|}
 comment|// Carrying meta?
 if|if
